# internal/server/grpc/url/pb/URLService.pb.go
@@ -1,0 +1,348 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.31.0
+// 	protoc        v4.25.1
+// source: url/URLService.proto
+
+package url_pb
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type CreateURLAliasRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Original string `protobuf:"bytes,1,opt,name=original,proto3" json:"original,omitempty"`
+}
+
+func (x *CreateURLAliasRequest) Reset() {
+	*x = CreateURLAliasRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_url_URLService_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *CreateURLAliasRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CreateURLAliasRequest) ProtoMessage() {}
+
+func (x *CreateURLAliasRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_url_URLService_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CreateURLAliasRequest.ProtoReflect.Descriptor instead.
+func (*CreateURLAliasRequest) Descriptor() ([]byte, []int) {
+	return file_url_URLService_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *CreateURLAliasRequest) GetOriginal() string {
+	if x != nil {
+		return x.Original
+	}
+	return ""
+}
+
+type CreateURLAliasResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Alias string `protobuf:"bytes,1,opt,name=alias,proto3" json:"alias,omitempty"`
+}
+
+func (x *CreateURLAliasResponse) Reset() {
+	*x = CreateURLAliasResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_url_URLService_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *CreateURLAliasResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CreateURLAliasResponse) ProtoMessage() {}
+
+func (x *CreateURLAliasResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_url_URLService_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CreateURLAliasResponse.ProtoReflect.Descriptor instead.
+func (*CreateURLAliasResponse) Descriptor() ([]byte, []int) {
+	return file_url_URLService_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *CreateURLAliasResponse) GetAlias() string {
+	if x != nil {
+		return x.Alias
+	}
+	return ""
+}
+
+type GetOriginalByAliasRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Alias string `protobuf:"bytes,1,opt,name=alias,proto3" json:"alias,omitempty"`
+}
+
+func (x *GetOriginalByAliasRequest) Reset() {
+	*x = GetOriginalByAliasRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_url_URLService_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetOriginalByAliasRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetOriginalByAliasRequest) ProtoMessage() {}
+
+func (x *GetOriginalByAliasRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_url_URLService_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetOriginalByAliasRequest.ProtoReflect.Descriptor instead.
+func (*GetOriginalByAliasRequest) Descriptor() ([]byte, []int) {
+	return file_url_URLService_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *GetOriginalByAliasRequest) GetAlias() string {
+	if x != nil {
+		return x.Alias
+	}
+	return ""
+}
+
+type GetOriginalByAliasResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Original string `protobuf:"bytes,1,opt,name=original,proto3" json:"original,omitempty"`
+}
+
+func (x *GetOriginalByAliasResponse) Reset() {
+	*x = GetOriginalByAliasResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_url_URLService_proto_msgTypes[3]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetOriginalByAliasResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetOriginalByAliasResponse) ProtoMessage() {}
+
+func (x *GetOriginalByAliasResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_url_URLService_proto_msgTypes[3]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetOriginalByAliasResponse.ProtoReflect.Descriptor instead.
+func (*GetOriginalByAliasResponse) Descriptor() ([]byte, []int) {
+	return file_url_URLService_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *GetOriginalByAliasResponse) GetOriginal() string {
+	if x != nil {
+		return x.Original
+	}
+	return ""
+}
+
+var File_url_URLService_proto protoreflect.FileDescriptor
+
+var file_url_URLService_proto_rawDesc = []byte{
+	0x0a, 0x14, 0x75, 0x72, 0x6c, 0x2f, 0x55, 0x52, 0x4c, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x03, 0x75, 0x72, 0x6c, 0x22, 0x33, 0x0a, 0x15, 0x43,
+	0x72, 0x65, 0x61, 0x74, 0x65, 0x55, 0x52, 0x4c, 0x41, 0x6c, 0x69, 0x61, 0x73, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x12, 0x1a, 0x0a, 0x08, 0x6f, 0x72, 0x69, 0x67, 0x69, 0x6e, 0x61, 0x6c,
+	0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x6f, 0x72, 0x69, 0x67, 0x69, 0x6e, 0x61, 0x6c,
+	0x22, 0x2e, 0x0a, 0x16, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x55, 0x52, 0x4c, 0x41, 0x6c, 0x69,
+	0x61, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x61, 0x6c,
+	0x69, 0x61, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x61, 0x6c, 0x69, 0x61, 0x73,
+	0x22, 0x31, 0x0a, 0x19, 0x47, 0x65, 0x74, 0x4f, 0x72, 0x69, 0x67, 0x69, 0x6e, 0x61, 0x6c, 0x42,
+	0x79, 0x41, 0x6c, 0x69, 0x61, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x14, 0x0a,
+	0x05, 0x61, 0x6c, 0x69, 0x61, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x61, 0x6c,
+	0x69, 0x61, 0x73, 0x22, 0x38, 0x0a, 0x1a, 0x47, 0x65, 0x74, 0x4f, 0x72, 0x69, 0x67, 0x69, 0x6e,
+	0x61, 0x6c, 0x42, 0x79, 0x41, 0x6c, 0x69, 0x61, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
+	0x65, 0x12, 0x1a, 0x0a, 0x08, 0x6f, 0x72, 0x69, 0x67, 0x69, 0x6e, 0x61, 0x6c, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x08, 0x6f, 0x72, 0x69, 0x67, 0x69, 0x6e, 0x61, 0x6c, 0x32, 0xb0, 0x01,
+	0x0a, 0x0c, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x49,
+	0x0a, 0x0e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x55, 0x52, 0x4c, 0x41, 0x6c, 0x69, 0x61, 0x73,
+	0x12, 0x1a, 0x2e, 0x75, 0x72, 0x6c, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x55, 0x52, 0x4c,
+	0x41, 0x6c, 0x69, 0x61, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1b, 0x2e, 0x75,
+	0x72, 0x6c, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x55, 0x52, 0x4c, 0x41, 0x6c, 0x69, 0x61,
+	0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x55, 0x0a, 0x12, 0x47, 0x65, 0x74,
+	0x4f, 0x72, 0x69, 0x67, 0x69, 0x6e, 0x61, 0x6c, 0x42, 0x79, 0x41, 0x6c, 0x69, 0x61, 0x73, 0x12,
+	0x1e, 0x2e, 0x75, 0x72, 0x6c, 0x2e, 0x47, 0x65, 0x74, 0x4f, 0x72, 0x69, 0x67, 0x69, 0x6e, 0x61,
+	0x6c, 0x42, 0x79, 0x41, 0x6c, 0x69, 0x61, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
+	0x1f, 0x2e, 0x75, 0x72, 0x6c, 0x2e, 0x47, 0x65, 0x74, 0x4f, 0x72, 0x69, 0x67, 0x69, 0x6e, 0x61,
+	0x6c, 0x42, 0x79, 0x41, 0x6c, 0x69, 0x61, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
+	0x42, 0x0b, 0x5a, 0x09, 0x2e, 0x2f, 0x3b, 0x75, 0x72, 0x6c, 0x5f, 0x70, 0x62, 0x62, 0x06, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_url_URLService_proto_rawDescOnce sync.Once
+	file_url_URLService_proto_rawDescData = file_url_URLService_proto_rawDesc
+)
+
+func file_url_URLService_proto_rawDescGZIP() []byte {
+	file_url_URLService_proto_rawDescOnce.Do(func() {
+		file_url_URLService_proto_rawDescData = protoimpl.X.CompressGZIP(file_url_URLService_proto_rawDescData)
+	})
+	return file_url_URLService_proto_rawDescData
+}
+
+var file_url_URLService_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
+var file_url_URLService_proto_goTypes = []interface{}{
+	(*CreateURLAliasRequest)(nil),      // 0: url.CreateURLAliasRequest
+	(*CreateURLAliasResponse)(nil),     // 1: url.CreateURLAliasResponse
+	(*GetOriginalByAliasRequest)(nil),  // 2: url.GetOriginalByAliasRequest
+	(*GetOriginalByAliasResponse)(nil), // 3: url.GetOriginalByAliasResponse
+}
+var file_url_URLService_proto_depIdxs = []int32{
+	0, // 0: url.EventService.CreateURLAlias:input_type -> url.CreateURLAliasRequest
+	2, // 1: url.EventService.GetOriginalByAlias:input_type -> url.GetOriginalByAliasRequest
+	1, // 2: url.EventService.CreateURLAlias:output_type -> url.CreateURLAliasResponse
+	3, // 3: url.EventService.GetOriginalByAlias:output_type -> url.GetOriginalByAliasResponse
+	2, // [2:4] is the sub-list for method output_type
+	0, // [0:2] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_url_URLService_proto_init() }
+func file_url_URLService_proto_init() {
+	if File_url_URLService_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_url_URLService_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*CreateURLAliasRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_url_URLService_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*CreateURLAliasResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_url_URLService_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetOriginalByAliasRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_url_URLService_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetOriginalByAliasResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_url_URLService_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   4,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_url_URLService_proto_goTypes,
+		DependencyIndexes: file_url_URLService_proto_depIdxs,
+		MessageInfos:      file_url_URLService_proto_msgTypes,
+	}.Build()
+	File_url_URLService_proto = out.File
+	file_url_URLService_proto_rawDesc = nil
+	file_url_URLService_proto_goTypes = nil
+	file_url_URLService_proto_depIdxs = nil
+}
