# internal/server/grpc/url/pb/URLService_grpc.pb.go
@@ -1,0 +1,146 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.3.0
+// - protoc             v4.25.1
+// source: url/URLService.proto
+
+package url_pb
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.32.0 or later.
+const _ = grpc.SupportPackageIsVersion7
+
+const (
+	EventService_CreateURLAlias_FullMethodName     = "/url.EventService/CreateURLAlias"
+	EventService_GetOriginalByAlias_FullMethodName = "/url.EventService/GetOriginalByAlias"
+)
+
+// EventServiceClient is the client API for EventService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type EventServiceClient interface {
+	CreateURLAlias(ctx context.Context, in *CreateURLAliasRequest, opts ...grpc.CallOption) (*CreateURLAliasResponse, error)
+	GetOriginalByAlias(ctx context.Context, in *GetOriginalByAliasRequest, opts ...grpc.CallOption) (*GetOriginalByAliasResponse, error)
+}
+
+type eventServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewEventServiceClient(cc grpc.ClientConnInterface) EventServiceClient {
+	return &eventServiceClient{cc}
+}
+
+func (c *eventServiceClient) CreateURLAlias(ctx context.Context, in *CreateURLAliasRequest, opts ...grpc.CallOption) (*CreateURLAliasResponse, error) {
+	out := new(CreateURLAliasResponse)
+	err := c.cc.Invoke(ctx, EventService_CreateURLAlias_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *eventServiceClient) GetOriginalByAlias(ctx context.Context, in *GetOriginalByAliasRequest, opts ...grpc.CallOption) (*GetOriginalByAliasResponse, error) {
+	out := new(GetOriginalByAliasResponse)
+	err := c.cc.Invoke(ctx, EventService_GetOriginalByAlias_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// EventServiceServer is the server API for EventService service.
+// All implementations must embed UnimplementedEventServiceServer
+// for forward compatibility
+type EventServiceServer interface {
+	CreateURLAlias(context.Context, *CreateURLAliasRequest) (*CreateURLAliasResponse, error)
+	GetOriginalByAlias(context.Context, *GetOriginalByAliasRequest) (*GetOriginalByAliasResponse, error)
+	mustEmbedUnimplementedEventServiceServer()
+}
+
+// UnimplementedEventServiceServer must be embedded to have forward compatible implementations.
+type UnimplementedEventServiceServer struct {
+}
+
+func (UnimplementedEventServiceServer) CreateURLAlias(context.Context, *CreateURLAliasRequest) (*CreateURLAliasResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateURLAlias not implemented")
+}
+func (UnimplementedEventServiceServer) GetOriginalByAlias(context.Context, *GetOriginalByAliasRequest) (*GetOriginalByAliasResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetOriginalByAlias not implemented")
+}
+func (UnimplementedEventServiceServer) mustEmbedUnimplementedEventServiceServer() {}
+
+// UnsafeEventServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to EventServiceServer will
+// result in compilation errors.
+type UnsafeEventServiceServer interface {
+	mustEmbedUnimplementedEventServiceServer()
+}
+
+func RegisterEventServiceServer(s grpc.ServiceRegistrar, srv EventServiceServer) {
+	s.RegisterService(&EventService_ServiceDesc, srv)
+}
+
+func _EventService_CreateURLAlias_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateURLAliasRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(EventServiceServer).CreateURLAlias(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: EventService_CreateURLAlias_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(EventServiceServer).CreateURLAlias(ctx, req.(*CreateURLAliasRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _EventService_GetOriginalByAlias_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetOriginalByAliasRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(EventServiceServer).GetOriginalByAlias(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: EventService_GetOriginalByAlias_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(EventServiceServer).GetOriginalByAlias(ctx, req.(*GetOriginalByAliasRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// EventService_ServiceDesc is the grpc.ServiceDesc for EventService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var EventService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "url.EventService",
+	HandlerType: (*EventServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "CreateURLAlias",
+			Handler:    _EventService_CreateURLAlias_Handler,
+		},
+		{
+			MethodName: "GetOriginalByAlias",
+			Handler:    _EventService_GetOriginalByAlias_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "url/URLService.proto",
+}
